--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 撒吖
+title: 呗嗒语音
 subtitle: ''
 description: ''
 keywords:
-author: sanuya
+author: beita
 language: zh-CN
 timezone: ''
 
